<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.iessaladillo.pedrojoya.encuesta.EncuestaFragment" >

    <TextView
        android:id="@+id/lblPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="1.- Comienza y acaba puntualmente las clases"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rgRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" >

        <RadioButton
            android:id="@+id/rbOpcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nada" />

        <RadioButton
            android:id="@+id/rbOpcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poco" />

        <RadioButton
            android:id="@+id/rbOpcion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bastante" />

        <RadioButton
            android:id="@+id/rbOpcion4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mucho" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/siguiente_pregunta"
        android:background="@drawable/siguiente_fondo" />
    <ImageButton
        android:id="@+id/btnAnterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/pregunta_anterior"
        android:background="@drawable/anterior_fondo" />
    
</RelativeLayout>