<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.iessaladillo.pedrojoya.encuesta.MainFragment" >

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo_encuesta"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/lblTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/texto_encuesta"
        android:gravity="center"
        android:layout_below="@+id/lblTitulo"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/btnEncuesta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblTexto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/realizar_encuesta" />

    <Button
        android:id="@+id/btnResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnEncuesta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/ver_resultados" />

</RelativeLayout>